# scrum

./: README.md  crowding.py  make_network.py  model.py  occupancy.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
tests/: test_make_network.py  test_model.py
